# Cordelia

./: CMakeLists.txt  cleancache.sh  dbtest.csv  main.cpp
framework/DB/: DBHandler.hpp
framework/Modules/: NginxSetting.hpp
framework/System/: FileHandler.hpp  FxException.hpp  StringToken.hpp
framework/Web/: HttpHandler.hpp  httplib.h
framework/Web/presets/: index.h
